--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "devDependencies": {
     "@sveltejs/adapter-auto": "next",
     "@sveltejs/kit": "next",
-    "svelte": "^3.44.0"
+    "svelte": "^3.44.0",
+    "svelte2tsx": "^0.4.14",
+    "typescript": "^4.5.5"
   },
   "license": "MIT",
   "type": "module"
