--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "segmented-control-svelte",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "scripts": {
     "dev": "svelte-kit dev",
     "build": "svelte-kit build",
@@ -15,6 +15,7 @@
     "svelte2tsx": "^0.4.14",
     "typescript": "^4.5.5"
   },
+  "repository": "github:stuymedova/segmented-control-svelte",
   "license": "MIT",
   "type": "module"
 }
